// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxView should handle background properties 1`] = `
<View
  enable-fast-image={true}
  style={
    {
      "backgroundColor": "#ff0000",
      "borderRadius": 10,
    }
  }
  testID="background-view"
>
  <View
    onLayout={[Function]}
    style={
      {
        "borderRadius": 10,
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    allowFontScaling={false}
  >
    Background content
  </Text>
</View>
`;

exports[`MpxView should handle flex layout properties 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexBasis": "auto",
      "flexDirection": "row",
      "flexShrink": 1,
      "flexWrap": "nowrap",
      "justifyContent": "space-between",
    }
  }
  testID="flex-view"
>
  <Text
    allowFontScaling={false}
  >
    Item 1
  </Text>
  <Text
    allowFontScaling={false}
  >
    Item 2
  </Text>
</View>
`;

exports[`MpxView should handle nested views and complex structure 1`] = `
<View
  style={
    {
      "padding": 5,
    }
  }
  testID="nested-view"
>
  <View
    style={
      {
        "margin": 2,
      }
    }
  >
    <Text
      allowFontScaling={false}
    >
      Nested content
    </Text>
  </View>
  <Text
    allowFontScaling={false}
  >
    Sibling content
  </Text>
</View>
`;

exports[`MpxView should render with basic props and styles 1`] = `
<View
  style={
    {
      "backgroundColor": "#f0f0f0",
      "borderRadius": 5,
      "padding": 10,
    }
  }
  testID="basic-view"
>
  <Text
    allowFontScaling={false}
  >
    Basic content
  </Text>
</View>
`;
